# saster-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
carl/: HIDDEN_DIRECTIVES.md  README.md  __init__.py  carl_agent.py  directives.py  run_exfil.py  run_recon.py  server.py
docs/: contribution.md  decision-trees.md  demo-log-v0.1.0.txt  detectors.md  har_import.md  methodology.md  pattern-authoring.md  release-notes-0.1.0.md  release-notes-0.2.0.md
examples/: carl_config.py  runner.py
saster_harness/: __init__.py  __main__.py  baseline.py  config.py  detector.py  drift.py  embedding.py  event.py  har_cli.py  harness.py  persistence.py  proxy.py  refusal_sampler.py  scheduler.py
saster_harness/adapters/: __init__.py  base.py  har_adapter.py  http_json.py
saster_harness/corpora/: __init__.py  refusal_probes.txt  refusals.txt
saster_harness/detectors/: __init__.py  base_induction.py  saster_13_induced.py  saster_15_induced.py  saster_18.py  saster_18_induced.py  saster_18_multiturn.py  saster_24.py  saster_24_induced.py  saster_26.py  saster_26_induced.py  saster_27.py  saster_28.py  saster_31.py  saster_33.py
saster_harness/prober/: __init__.py  base.py  http.py  in_process.py
scripts/: phase4_calibration.py  phase6_demo_log.py
tests/: test_baseline_hours.py  test_carl_openai_auth.py  test_carl_scenarios.py  test_carl_server.py  test_detectors.py  test_drift.py  test_extra_reframings.py  test_har_adapter.py  test_har_cli.py  test_induction_split.py  test_induction_timeout.py  test_multiturn_induction.py  test_persistence.py  test_probe_origin.py  test_probe_scheduler.py  test_prober.py  test_proxy_options.py  test_refusal_sampler.py  test_register_detector.py  test_saster_13_induced.py  test_saster_15_induced.py  test_saster_18_induced.py  test_saster_24_induced.py  test_saster_26_induced.py  test_shadow_mode.py  test_smoke.py  test_v03_integration.py
tests/fixtures/har/: sample_chat.har
